Fix controlgroup styles so that controlgroups center nice on mobile

--- a/piserver/public/stylesheets/style.css
+++ b/piserver/public/stylesheets/style.css
@@ -13,7 +13,6 @@ header h1{
 }
 
 #button-group{
-	width: 60%;
 	max-width: 400px;
 	margin: 0 auto;
 }
